# dev-process

./: .gitignore  BOOTSTRAP.md  CHANGELOG.md  LICENSE.md  README.md  copier.yml  pyproject.toml
.github/workflows/: ci.yml  release-tag.yml
docs/: CAPABILITIES.md  SBOM.md  SYSTEM-REQUIREMENTS.md
template/: .copier-answers.yml.jinja  CLAUDE.md.jinja  PRODUCT.md.jinja  {% if ci.gitlab %}.gitlab-ci.yml{% endif %}  {% if harnesses.agents_md %}AGENTS.md{% endif %}.jinja  {% if harnesses.claude | default(true) %}CLAUDE.md{% endif %}.jinja  {% if modules.arch_docs %}ARCHITECTURE-OVERVIEW.md{% endif %}  {% if modules.arch_docs %}ARCHITECTURE-OVERVIEW.md{% endif %}.jinja  {% if modules.arch_onboarding %}ARCHITECTURE.md{% endif %}.jinja
tests/: conftest.py  test_adapters.py  test_arch_docs.py  test_arch_onboarding.py  test_audit_hardening.py  test_bootstrap.py  test_branch_protection.py  test_brownfield.py  test_ci_adapters.py  test_command_adapters.py  test_contract_first.py  test_contracts_drift.py  test_core_docs.py  test_cross_platform_runtime.py  test_decisions.py  test_dor_dod.py  test_english_canon.py  test_feature_registry.py  test_git_hooks.py  test_github_issues.py  test_github_master.py  test_governance_pilot.py  test_hitl_dashboards.py  test_kernel_gate.py  test_manifest_ci.py  test_modules.py  test_one_owner.py  test_parity.py  test_product_frame.py  test_profiles.py  test_rendered_lint.py  test_review.py  test_review_bundle.py  test_sbom.py  test_security_floor.py  test_spine.py  test_story_order.py  test_telemetry.py  test_trace.py
(+181 files in other folders)
