[project]
name = "dev-process"
version = "0.6.0"
description = "Portable, harness-agnostic AI-assisted development process (copier template)"
requires-python = ">=3.11"

[dependency-groups]
dev = ["copier>=9.4", "pytest>=8", "ruff>=0.6", "pyyaml>=6"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
